updated projects to open in new tab

--- a/projects.html
+++ b/projects.html
@@ -40,50 +40,50 @@
 	<div class="resources">
 		<div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Children-Day-Thessalonians-Leader-Book/dp/1430032251?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1430032251"><img src="http://ecx.images-amazon.com/images/I/51WnvOBSYFL.jpg"></a></li>
-				<li><a href="http://www.amazon.com/James-Mercy-Triumphs-Member-Book/dp/141587171X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=141587171X"><img src="http://ecx.images-amazon.com/images/I/51Gxsu0EMOL.jpg"></a></li>
-				<li><a href="https://www.amazon.com/Your-Pirate-Tara-McClary-Reeves/dp/1684013194?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1684013194"><img src="https://images-na.ssl-images-amazon.com/images/I/61yc9M3UVdL.jpg"></a></li>
-				<li><a href="http://www.amazon.com/Taste-Breaking-Free-Booklet-Real/dp/1415865280?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415865280"><img src="http://ecx.images-amazon.com/images/I/51g34YpDFYL.jpg"></a></li>
+				<li><a href="http://www.amazon.com/Children-Day-Thessalonians-Leader-Book/dp/1430032251?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1430032251" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51WnvOBSYFL.jpg"></a></li>
+				<li><a href="http://www.amazon.com/James-Mercy-Triumphs-Member-Book/dp/141587171X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=141587171X" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51Gxsu0EMOL.jpg"></a></li>
+				<li><a href="https://www.amazon.com/Your-Pirate-Tara-McClary-Reeves/dp/1684013194?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1684013194" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/61yc9M3UVdL.jpg"></a></li>
+				<li><a href="http://www.amazon.com/Taste-Breaking-Free-Booklet-Real/dp/1415865280?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415865280" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51g34YpDFYL.jpg"></a></li>
 			  </ul>
 		  </div>
 		  <div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Experiencing-God-Knowing-Revised-Expanded/dp/0805447539?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805447539"><img src="http://ecx.images-amazon.com/images/I/516TKx9nc7L.jpg"></a></li>
-				<li><a href="http://www.amazon.com/The-Frazzled-Female-Finding-Peace/dp/0633095265?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0633095265"><img src="http://ecx.images-amazon.com/images/I/210CuuokpnL.jpg"</a></li>
-				<li><a href="https://www.amazon.com/Anchored-Purpose-Positioning-Yourself-Fulfilling/dp/0997789301?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0997789301"><img src="https://images-na.ssl-images-amazon.com/images/I/41o4pqdINIL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/The-Fire-Catcher-Declaration-Grace/dp/1462727530?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1462727530"><img src="http://ecx.images-amazon.com/images/I/51OpE2RZHWL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Experiencing-God-Knowing-Revised-Expanded/dp/0805447539?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805447539" target="_blank"><img src="http://ecx.images-amazon.com/images/I/516TKx9nc7L.jpg"></a></li>
+				<li><a href="http://www.amazon.com/The-Frazzled-Female-Finding-Peace/dp/0633095265?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0633095265" target="_blank"><img src="http://ecx.images-amazon.com/images/I/210CuuokpnL.jpg"</a></li>
+				<li><a href="https://www.amazon.com/Anchored-Purpose-Positioning-Yourself-Fulfilling/dp/0997789301?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0997789301" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/41o4pqdINIL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/The-Fire-Catcher-Declaration-Grace/dp/1462727530?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1462727530" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51OpE2RZHWL.jpg"</a></li>
 			  </ul>
 		  </div>
 		  <div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Heaven-Christian-Growth-Study-Workbook/dp/1415832196?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415832196"><img src="http://ecx.images-amazon.com/images/I/51o0Kg7tDjL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Adoniram-Judson-Bicentennial-Appreciation-Missionary/dp/1433677652?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433677652"><img src="http://ecx.images-amazon.com/images/I/41U-Gg7MJPL.jpg"</a></li>
-				<li><a href="https://www.amazon.com/Discipleship-Matters-Learning-Timothys-Spiritual/dp/0988593211?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0988593211"><img src="https://images-na.ssl-images-amazon.com/images/I/41aN2nJSobL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/In-Our-Shoes-Issues-ministers/dp/141586649X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=141586649X"><img src="http://ecx.images-amazon.com/images/I/3151-mgwyDL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Heaven-Christian-Growth-Study-Workbook/dp/1415832196?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415832196" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51o0Kg7tDjL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Adoniram-Judson-Bicentennial-Appreciation-Missionary/dp/1433677652?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433677652" target="_blank"><img src="http://ecx.images-amazon.com/images/I/41U-Gg7MJPL.jpg"</a></li>
+				<li><a href="https://www.amazon.com/Discipleship-Matters-Learning-Timothys-Spiritual/dp/0988593211?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0988593211" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/41aN2nJSobL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/In-Our-Shoes-Issues-ministers/dp/141586649X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=141586649X" target="_blank"><img src="http://ecx.images-amazon.com/images/I/3151-mgwyDL.jpg"</a></li>
 			  </ul>
 		  </div>
 		  <div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Missing-Pieces-Member-Jennifer-Rothschild/dp/1415869979?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415869979"><img src="http://ecx.images-amazon.com/images/I/51crRcj1UjL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Holman-Illustrated-Bible-Commentary/dp/080549930X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=080549930X"><img src="http://ecx.images-amazon.com/images/I/51eiIBm-ZVL.jpg"</a></li>
-				<li><a href="https://www.amazon.com/History-Israel-Bronze-through-Jewish/dp/1433643189?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433643189"><img src="https://images-na.ssl-images-amazon.com/images/I/51eiIn4KUnL.jpg"</a></li>
-				<li><a href="https://www.amazon.com/Pursue-King-Christians-Handbook-Spiritual/dp/1539614719?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1539614719"><img src="https://images-na.ssl-images-amazon.com/images/I/51VLx9hbgnL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Missing-Pieces-Member-Jennifer-Rothschild/dp/1415869979?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1415869979" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51crRcj1UjL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Holman-Illustrated-Bible-Commentary/dp/080549930X?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=080549930X" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51eiIBm-ZVL.jpg"</a></li>
+				<li><a href="https://www.amazon.com/History-Israel-Bronze-through-Jewish/dp/1433643189?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433643189" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/51eiIn4KUnL.jpg"</a></li>
+				<li><a href="https://www.amazon.com/Pursue-King-Christians-Handbook-Spiritual/dp/1539614719?SubscriptionId=AKIAIOCEBIGP6NUBL47A&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1539614719" target="_blank"><img src="https://images-na.ssl-images-amazon.com/images/I/51VLx9hbgnL.jpg"</a></li>
 			  </ul>
 		  </div>
 		  <div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Revelation-Exegetical-Theological-Exposition-Commentary/dp/0805401393?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805401393"><img src="http://ecx.images-amazon.com/images/I/51Gsfnh-p6L.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Rejoice-Lord-Always-Hillman-Story/dp/1490802584?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1490802584"><img src="http://ecx.images-amazon.com/images/I/41tmDNReDfL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Holman-Illustrated-Dictionary-Charles-Draper/dp/0805428364?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805428364"><img src="http://ecx.images-amazon.com/images/I/51oepS%2BzEAL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Captivated-King-His-Kingdom-Encounter-ebook/dp/B004KAA9UC?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=B004KAA9UC"><img src="http://ecx.images-amazon.com/images/I/41%2BRbKohOzL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Revelation-Exegetical-Theological-Exposition-Commentary/dp/0805401393?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805401393" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51Gsfnh-p6L.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Rejoice-Lord-Always-Hillman-Story/dp/1490802584?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1490802584" target="_blank"><img src="http://ecx.images-amazon.com/images/I/41tmDNReDfL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Holman-Illustrated-Dictionary-Charles-Draper/dp/0805428364?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=0805428364" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51oepS%2BzEAL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Captivated-King-His-Kingdom-Encounter-ebook/dp/B004KAA9UC?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=B004KAA9UC" target="_blank"><img src="http://ecx.images-amazon.com/images/I/41%2BRbKohOzL.jpg"</a></li>
 			  </ul>
 		  </div>
 		  <div class="col-sm-2">
 			  <ul>
-				<li><a href="http://www.amazon.com/Surrendering-Secret-Healing-Heartbreak-Abortion/dp/1574943324?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1574943324"><img src="http://ecx.images-amazon.com/images/I/41%2B2lMUSQZL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Point-Me-Jesus-Devotions-Children/dp/1424550947?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1424550947"><img src="http://ecx.images-amazon.com/images/I/51IpHnsw9ML.jpg"</a></li>
-				<li><a href="http://www.amazon.com/The-Resolution-Men-Stephen-Kendrick/dp/1433671220?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433671220"><img src="http://ecx.images-amazon.com/images/I/51F8V-y6DpL.jpg"</a></li>
-				<li><a href="http://www.amazon.com/Truth-Culture-Doubt-Skeptical-Challenges/dp/1433684047?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433684047"><img src="http://ecx.images-amazon.com/images/I/4152vd%2BiiOL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Surrendering-Secret-Healing-Heartbreak-Abortion/dp/1574943324?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1574943324" target="_blank"><img src="http://ecx.images-amazon.com/images/I/41%2B2lMUSQZL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Point-Me-Jesus-Devotions-Children/dp/1424550947?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1424550947" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51IpHnsw9ML.jpg"</a></li>
+				<li><a href="http://www.amazon.com/The-Resolution-Men-Stephen-Kendrick/dp/1433671220?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433671220" target="_blank"><img src="http://ecx.images-amazon.com/images/I/51F8V-y6DpL.jpg"</a></li>
+				<li><a href="http://www.amazon.com/Truth-Culture-Doubt-Skeptical-Challenges/dp/1433684047?SubscriptionId=0ENGV10E9K9QDNSJ5C82&tag=faithbasededi-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1433684047" target="_blank"><img src="http://ecx.images-amazon.com/images/I/4152vd%2BiiOL.jpg"</a></li>
 			  </ul>
 		  </div>
 	</div>	  
