content updates to align with current webpage

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-
 <body>
   <header class="container">
     <div class="row">
@@ -17,11 +16,11 @@
 	  <h2>Faith-Based Editorial Services</h2>
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
-      <nav class="col-sm-3">
+	  <nav class="col-sm-3">
         <p>about</p>
-        <p>projects</p>
-		<p>pricing</p>
-        <p>contact</p>
+        <p><a href="projects.html">projects</a></p>
+				<p><a href="faq.html">faq</a></p>
+        <p><a href="contact.html">contact</a></p>
       </nav>
     </div>
   </header>
@@ -29,26 +28,28 @@
     <div class="container">
       <div class="row text-center">
         <h2>About</h2>
-        <h3>...</h3>
-		<a class="btn btn-primary" href="pricing.html" role="button">Learn more
+        <br>
+		<a class="btn btn-primary" href="projects.html" role="button">Learn more
         </a>
       </div>
     </div>
   </section>
-  <section class="container">
-    <div class="row">
-      <div class="col-sm-8">
-		<h3>
-		<p>Bethany McShurley of Faith-Based Editorial Services has worked on projects for noted authors Randy Alcorn, Henry Blackaby, Lisa Whelchel, and Margaret Feinberg. She’s also a writer of Christian curriculum, church productions, and leader guides. Her work is featured in Vicki Courtney’s Five Conversations You Must Have with Your Son, Jennifer Rothschild's Missing Pieces: Real Hope When Life Doesn't Make Sense, and Beth Moore’s James: Mercy Triumphs.   
-		<br><br>Whether helping authors perfect their messages of faith prior to print or condensing inspirational trade books into workbook format, Bethany uses her eye for detail to strengthen Christian discipleship efforts. Helping people to clearly and enthusiastically convey the difference Jesus Christ makes in lives is central to her work.
-		<br><br>Each client of Faith-Based Editorial Services can expect encouragement and idea prompts meant to stimulate professional and spiritual growth. Bethany begins with a critique of your work as a whole. Is the message solid? Does it convey what you intend? Might your project find a place in today's competitive Christian market? The subsequent editing process is a learning experience that both polishes the message and strengthens the writer. Even recognized authors benefit from the honest feedback of an experienced editor.</p>
-		</h3>
+    <section class="container">
+      <div class="row">
+        <div class="col-sm-8">
+      <h4>
+      <p>Bethany McShurley of Faith-Based Editorial Services has worked on projects for noted authors Randy Alcorn, Henry Blackaby, Lisa Whelchel, and Margaret Feinberg. She’s also a writer of Christian curriculum, church productions, and leader guides. Her work is featured in Vicki Courtney’s Five Conversations You Must Have with Your Son, Jennifer Rothschild's Missing Pieces: Real Hope When Life Doesn't Make Sense, and Beth Moore’s James: Mercy Triumphs.   
+      <br><br>Whether helping authors perfect their messages of faith prior to print or condensing inspirational trade books into workbook format, Bethany uses her eye for detail to strengthen Christian discipleship efforts. Helping people to clearly and enthusiastically convey the difference Jesus Christ makes in lives is central to her work.
+      <br><br>Each client of Faith-Based Editorial Services can expect encouragement and idea prompts meant to stimulate professional and spiritual growth. Bethany begins with a critique of your work as a whole. Is the message solid? Does it convey what you intend? Might your project find a place in today's competitive Christian market? The subsequent editing process is a learning experience that both polishes the message and strengthens the writer. Even recognized authors benefit from the honest feedback of an experienced editor.</p>
+      </h4>
+        </div>
+        <div class="col-sm-4">
+          <div id="Bethany">
+            <img src="bethany.jpg">
+          </div>
+        </div>
       </div>
-      <div class="col-sm-4">
-        <img src="https://static1.squarespace.com/static/53322ac2e4b0fba62007f0b6/t/58c2ffd2197aea86abf03159/1489174491403/?format=300w">
-      </div>
-    </div>
-  </section>
+    </section>
   <footer class="container">
     <div class="row">
       <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
