--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-  
+ 
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -18,10 +18,10 @@
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
 	  <nav class="col-sm-3">
-        <p>about</p>
+        <p><a href="about.html">about</a></p>
         <p>projects</p>
-		<p>pricing</p>
-        <p>contact</p>
+				<p><a href="faq.html">faq</a></p>
+        <p><a href="contact.html">contact</a></p>
       </nav>
     </div>
   </header>
@@ -31,7 +31,8 @@
         <h2>Projects</h2>
 		<br>
 		<h3> Bethany McShurley edits a wide range of resources: church and business correspondence, curriculum, novels, devotionals, Christian biographies, workbooks, and promotional materials. She reviews initial product proposals, offers book doctoring assistance as necessary, and provides rewriting, content editing, and proofreading help as required. She has worked on the following titles, and many others, in various capacities. </h3>
-        </a>
+				</a>
+				<a class="btn btn-primary" href="faq.html" role="button">Learn more</a>
       </div>
     </div>
   </section>
