--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-
 <body>
   <header class="container">
     <div class="row">
@@ -17,11 +16,11 @@
 	  <h2>Faith-Based Editorial Services</h2>
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
-      <nav class="col-sm-3">
-        <p>about</p>
-        <p>projects</p>
-		<p>pricing</p>
-        <p>contact</p>
+	  <nav class="col-sm-3">
+        <p><a href="about.html">about</a></p>
+        <p><a href="projects.html">projects</a></p>
+				<p><a href="faq.html">faq</a></p>
+        <p><a href="contact.html">contact</a></p>
       </nav>
     </div>
   </header>
@@ -31,8 +30,7 @@
         <h2>Faith-Based Editorial Services</h2>
         <h3>Whether you’ve written a devotional book, biography, Bible study, or novel, a thorough edit can make your manuscript—and your message—shine. Before shopping for an agent or releasing your book on your own, allow a seasoned editor to strengthen your project.
 		<br><br>Bethany McShurley of Faith-Based Editorial Services specializes in preparing and developing writers for the Christian market.</h3>
-		<a class="btn btn-primary" href="about.html" role="button">Learn more
-        </a>
+		<a class="btn btn-primary" href="about.html" role="button">Learn more</a>
       </div>
     </div>
   </section>
