--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <header class="container">
     <div class="row">
       <div class="col-sm-8">
-	  <h2>Faith-Based Editorial Services</h2>
+	  <a href=index.html><h2>Faith-Based Editorial Services</h2></a>
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
 	  <nav class="col-sm-3">
