--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <div class="row text-center">
         <h2>Faith-Based Editorial Services</h2>
         <h3>Whether you’ve written a devotional book, biography, Bible study, or novel, a thorough edit can make your manuscript—and your message—shine. Before shopping for an agent or releasing your book on your own, allow a seasoned editor to strengthen your project.
-		<br><br>Bethany McShurley of Faith-Based Editorial Services specializes in preparing and developing writers for the Christian market.</h3>
+        <p></p>
+        Bethany McShurley of Faith-Based Editorial Services specializes in preparing and developing writers for the Christian market.</h3>
 		<a class="btn btn-primary" href="about.html" role="button">Learn more</a>
       </div>
     </div>
