--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
   <header class="container">
     <div class="row">
       <div class="col-sm-8">
-	  <h2>Faith-Based Editorial Services</h2>
+					<a href=index.html><h2>Faith-Based Editorial Services</h2></a>
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
 	  <nav class="col-sm-3">
@@ -29,9 +29,7 @@
     <div class="container">
       <div class="row text-center">
         <h2>Projects</h2>
-		<br>
-		<h3> Bethany McShurley edits a wide range of resources: church and business correspondence, curriculum, novels, devotionals, Christian biographies, workbooks, and promotional materials. She reviews initial product proposals, offers book doctoring assistance as necessary, and provides rewriting, content editing, and proofreading help as required. She has worked on the following titles, and many others, in various capacities. </h3>
-				</a>
+				<h3>Bethany McShurley edits a wide range of resources: church and business correspondence, curriculum, novels, devotionals, Christian biographies, workbooks, and promotional materials. She reviews initial product proposals, offers book doctoring assistance as necessary, and provides rewriting, content editing, and proofreading help as required. She has worked on the following titles, and many others, in various capacities. </h3>
 				<a class="btn btn-primary" href="faq.html" role="button">Learn more</a>
       </div>
     </div>
