updates to projects and faq

--- a/faq.html
+++ b/faq.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+<div id="faq">
   <header class="container">
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-md-9">
           <a href=index.html><h2>Faith-Based Editorial Services</h2></a>
 	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
       </div>
@@ -37,8 +38,14 @@
   <section class="article">
       <div class="row">
           <div class="col-sm-8">
-    <h3>Do I Really Need An Editor?</h3>
-    <p>Rabbit trails, awkward sentence construction, grammatical errors, and breaks in thought flow reduce a writer’s effectiveness. That’s why even seasoned authors benefit from an editor’s fresh perspective and critical eye. Please do not publish your book without first seeking an editor’s guidance. You will sell yourself—and your readers—short.</p>
+  <div class="row">
+    <div class="col-md-9">
+        <h3>Do I Really Need An Editor?</h3>
+      <p>Rabbit trails, awkward sentence construction, grammatical errors, and breaks in thought flow reduce a writer’s effectiveness. That’s why even seasoned authors benefit from an editor’s fresh perspective and critical eye. Please do not publish your book without first seeking an editor’s guidance. You will sell yourself—and your readers—short.</p>
+</div> 
+<div class="col-sm-3"><img src="everyone-needs-a-good-editor2.jpg">
+</div> 
+  </div>
     <h3>How Do I Know If I'm Ready For An Editor?</h3>
     <p>Contact an editor when your project is at least 95 percent complete. To get the most out of your editorial experience, you will need to address revisions within a few days of receiving them. At times this will require minor rewrites or expansions on an idea. Each project is completed within a set time frame.</p>
     <h3>What Should I Expect In The Editing Process?</h3>
@@ -88,6 +95,7 @@
       </ul>
     </div>
   </footer>
+</div>
 </body>
 
 </html>
