adding social media links

--- a/contact.html
+++ b/contact.html
@@ -48,24 +48,18 @@
     </div>
   </section>
   <footer class="container">
-    <div class="row">
-      <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
-      <ul class="col-sm-8">
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
-        </li>
-      </ul>
-    </div>
-  </footer>
+      <div class="row">
+        <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
+        <ul class="col-sm-8">
+          <li class="col-sm-2">
+            <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="FB-fLogo-Blue-broadcast-2.png"> </a>
+          </li>
+          <li class="col-sm-2">
+            <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="In-2C-41px-R.png"></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 </body>
 
 </html>
