--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </section>
   <section class="container">
     <div class="row">
+      <div id="testimonial">
       <div class="col-sm-6">
         <p>[Working with my editor was] a two-month tutoring session. ... Bethany takes spaghetti on paper and somehow creates a work of art.</p>
         <p>Stephanie Huffman, When You Grow Up and Get ... Single</p>
@@ -44,6 +45,7 @@
       <div class="col-sm-6">
         <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servants heart, and your valued partnership on my project.</p>
         <p>Linden Wolfe, Captivated by the King and His Kingdom.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -51,17 +53,11 @@
     <div class="row">
       <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
       <ul class="col-sm-8">
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+        <li class="col-sm-2">
+          <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="FB-fLogo-Blue-broadcast-2.png"> </a>
         </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
-        </li>
-        <li class="col-sm-1">
-          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+        <li class="col-sm-2">
+          <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="In-2C-41px-R.png"></a>
         </li>
       </ul>
     </div>
