--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
   <meta charset="utf-8" />
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-  
-  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-  <header class="container">
-    <div class="row">
-      <div class="col-sm-8">
-	  <h2>Faith-Based Editorial Services</h2>
-	  <h6>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</h6>
-      </div>
-	  <nav class="col-sm-3">
-        <p><a href="about.html">about</a></p>
-        <p><a href="projects.html">projects</a></p>
-				<p><a href="faq.html">faq</a></p>
-        <p><a href="contact.html">contact</a></p>
-      </nav>
-    </div>
-  </header>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
+          </div>
+          <ul class="nav navbar-nav">
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">home</a></li>           
+            <li><a href="about.html">about</a></li>
+            <li><a href="projects.html">projects</a></li>
+            <li><a href="faq.html">faq</a></li>
+            <li><a href="contact.html"><span class="glyphicon glyphicon-user"></span> contact</a></li>
+          </ul>
+        </div>
+      </nav>    
   <section class="jumbotron">
     <div class="container">
       <div class="row text-center">
