--- a/about.html
+++ b/about.html
@@ -11,10 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
-          </div>
+            <a class="navbar-brand" href="index.html">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
           <ul class="nav navbar-nav">
           </ul>
           <ul class="nav navbar-nav navbar-right">
