--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
-          </div>
+							<a class="navbar-brand" href="index.html">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
+						</div>
           <ul class="nav navbar-nav">
           </ul>
           <ul class="nav navbar-nav navbar-right">
