contact form update

--- a/contactResponse.html
+++ b/contactResponse.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script language-"javascript" type="text/javascript">
-    window.setTimeout('window.open("index.html")',4000)
+    window.setTimeout('window.location.replace("index.html")',4000)
   </script>
 </head>
 <body>
