image file cleanup

--- a/projects.html
+++ b/projects.html
@@ -124,10 +124,10 @@
 				<p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
 				<ul class="col-sm-8">
 					<li class="col-sm-2">
-						<a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="FB-fLogo-Blue-broadcast-2.png"> </a>
+						<a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
 					</li>
 					<li class="col-sm-2">
-						<a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="In-2C-41px-R.png"></a>
+						<a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="images\In-2C-41px-R.png"></a>
 					</li>
 				</ul>
 			</div>
