--- a/contactResponse.html
+++ b/contactResponse.html
@@ -3,7 +3,7 @@
 <head>
   <title>Faith-Based Editorial Services</title>
   <meta charset="utf-8" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -54,10 +54,10 @@
         <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
         <ul class="col-sm-8">
           <li class="col-sm-2">
-            <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="FB-fLogo-Blue-broadcast-2.png"> </a>
+            <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
           </li>
           <li class="col-sm-2">
-            <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="In-2C-41px-R.png"></a>
+            <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="images\In-2C-41px-R.png"></a>
           </li>
         </ul>
       </div>
