--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
         <h3>Do I Really Need An Editor?</h3>
       <p>Rabbit trails, awkward sentence construction, grammatical errors, and breaks in thought flow reduce a writer’s effectiveness. That’s why even seasoned authors benefit from an editor’s fresh perspective and critical eye. Please do not publish your book without first seeking an editor’s guidance. You will sell yourself—and your readers—short.</p>
 </div> 
-<div class="col-sm-3"><img src="everyone-needs-a-good-editor2.jpg">
+<div class="col-sm-3"><img src="images\everyone-needs-a-good-editor2.jpg">
 </div> 
   </div>
     <h3>How Do I Know If I'm Ready For An Editor?</h3>
@@ -81,10 +81,10 @@
         <p class="col-sm-4">&copy; 2016 Faith-Based Editorial Services</p>
         <ul class="col-sm-8">
           <li class="col-sm-2">
-            <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="FB-fLogo-Blue-broadcast-2.png"> </a>
+            <a href="https://www.facebook.com/Faith-Based-Editorial-Services-161360460576010/" target="_blank"><img src="images\FB-fLogo-Blue-broadcast-2.png"> </a>
           </li>
           <li class="col-sm-2">
-            <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="In-2C-41px-R.png"></a>
+            <a href="https://www.linkedin.com/in/bethany-mcshurley-7078b625/" target="_blank"><img src="images\In-2C-41px-R.png"></a>
           </li>
         </ul>
       </div>
