--- a/faq.html
+++ b/faq.html
@@ -8,24 +8,36 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
   <script type="text/javascript" src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-          <div class="navbar-header">
-              <a class="navbar-brand" href="index.html">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>
-            </div>
-          <ul class="nav navbar-nav">
-          </ul>
+  <!--Begin Navigation-->
+  <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Faith-Based Editorial Services<p>“WHATEVER YOU DO, WORK AT IT WITH ALL YOUR HEART, AS WORKING FOR THE LORD” (COL. 3:23, NIV).</p></a>          
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+</div>
+        <!-- Collect the nav links, forms, and other content for toggling --> 
+        <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">home</a></li>          
-            <li><a href="about.html">about</a></li>
-            <li><a href="projects.html">projects</a></li>
-            <li class="active"><a href="#">faq</a></li>  
-            <li><a href="contact.html"><span class="glyphicon glyphicon-user"></span> contact</a></li>
+              <li><a href="index.html">home</a></li>          
+              <li><a href="about.html">about</a></li>
+              <li><a href="projects.html">projects</a></li>
+              <li class="active"><a href="#">faq</a></li> 
+              <li><a href="contact.html"><span class="glyphicon glyphicon-user"></span> contact</a></li>
           </ul>
-        </div>
-      </nav>   
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+<!--End Navigation--> 
   <section class="jumbotron">
     <div class="container">
       <div class="row text-center">
