refer contact to e-mail until lambda form is figured out

--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
     <div class="container">
       <div class="row text-center">
         <h2>Contact Us</h2>
-        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please fill out the form below, and I will reply soon.</h3>
-        <div class="contactForm">
+        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please email me at <a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a>, and I will reply soon.</h3>
+<!--       <div class="contactForm">
         <form id="serverless-contact-form">
           <input type="text" name="fname" placeholder="Name" class="form-name">
           <input type="text" name="email" placeholder="Email Address" class="form-email">
@@ -66,6 +66,7 @@
         </div>
       </div>
     </div>
+  -->
   </section>
   <section class="container">
     <div class="row">
