--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     <div class="container">
       <div class="row text-center">
         <h2>Contact Us</h2>
-        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please email me at <a href="mailto:bethany@faithbasededitorial.com">bethany@faithbasededitorial.com</a>, and I will reply soon.</h3>
+        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please email me at <a href="mailto:faithbasededitorial@gmail.com">faithbasededitorial@gmail.com</a>, and I will reply soon.</h3>
 <!--       <div class="contactForm">
         <form id="serverless-contact-form">
           <input type="text" name="fname" placeholder="Name" class="form-name">
