--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,15 @@
   <title>Faith-Based Editorial Services</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-369763-6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-369763-6');
+    </script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -11,15 +20,6 @@
   <script type="text/javascript" src="script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-369763-6"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-369763-6');
-</script>
 
 </head>
 <body>
@@ -53,8 +53,8 @@
     <div class="container">
       <div class="row text-center">
         <h2>Contact Us</h2>
-        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please email me at <a href="mailto:faithbasededitorial@gmail.com">faithbasededitorial@gmail.com</a>, and I will reply soon.</h3>
-<!--       <div class="contactForm">
+        <h3>Thank you for your interest in Faith-Based Editorial Services. I would love to help you! Please fill out the form below, and I will reply soon.</h3>
+<div class="contactForm">
         <form id="serverless-contact-form">
           <input type="text" name="fname" placeholder="Name" class="form-name">
           <input type="text" name="email" placeholder="Email Address" class="form-email">
@@ -66,7 +66,6 @@
         </div>
       </div>
     </div>
-  -->
   </section>
   <section class="container">
     <div class="row">
