--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,11 @@
     <div class="row">
       <div class="col-sm-6">
         <p>[Working with my editor was] a two-month tutoring session. ... Bethany takes spaghetti on paper and somehow creates a work of art.</p>
-        <p>Stephanie Huffman, When You Grow Up and Get ... Single</p>
+        <p>Stephanie Huffman, <i>When You Grow Up and Get ... Single</i></p>
       </div>
       <div class="col-sm-6">
-        <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servants heart, and your valued partnership on my project.</p>
-        <p>Linden Wolfe, Captivated by the King and His Kingdom.</p>
+        <p>Faith-Based Editorial Services ... thanks for your love of Jesus, your servant's heart, and your valued partnership on my project.</p>
+        <p>Linden Wolfe, <i>Captivated by the King and His Kingdom</i>.</p>
       </div>
     </div>
   </section>
