--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
 </head>
 <body>
@@ -60,7 +60,7 @@
           <input type="text" name="email" placeholder="Email Address" class="form-email">
           <input type="text" name="title" placeholder="Project Title" class="form-title">
           <input type="text" name="genre" placeholder="Project Genre (fiction, biography, Bible study, etc.)." class="form-genre">
-          <textarea rows="5" cols="60" name="plans" placeholder="Please tell me about your plans for your manuscript." class="form-plans"></textarea><br>
+          <textarea rows="5" cols="60" name="plans" placeholder="Please tell me about your manuscript." class="form-plans"></textarea><br>
           <input type="submit" name="submit" value="Submit" class="form-submit">
         </form>
         </div>
